--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
   <version>1.0-SNAPSHOT</version>
   <name>MyApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <repositories>
+    <repository>
+      <id>prime-repo</id>
+      <name>Prime Repo</name>
+      <url>http://repository.primefaces.org</url>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -23,6 +30,12 @@
       <groupId>com.sun.faces</groupId>
       <artifactId>jsf-impl</artifactId>
       <version>2.1.7</version>
+    </dependency>
+    <!-- PrimeFaces -->
+    <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>6.0</version>
     </dependency>
   </dependencies>
   <build>
